# Maxi-Desktop

./: .gitignore  CMakeLists.txt  DEPENDENCIES.txt  LICENSE.txt  icono.rc
include/controller/: cambio.hpp  cambio_a.hpp  cambio_m.hpp  login.hpp  main_window.hpp  movimientos.hpp  pago_a.hpp  pago_m.hpp  refill.hpp  titlebar.hpp  venta.hpp  ws_client.hpp
include/controller/configuracion/: empresa.hpp  general.hpp  impresora.hpp  print_operation.hpp  sistema.hpp  terminal.hpp  usuarios.hpp
include/db/: coneccion.hpp
include/model/: configuracion.hpp  level_cash.hpp  list_ip.hpp  log.hpp  log_historial.hpp  pago_pendiente.hpp  roles.hpp  usuario_historial.hpp  usuarios.hpp  usuarios_roles.hpp
include/shared/: global.hpp  version_comparator.hpp
include/view/: bloq_num.hpp  box_columns.hpp  cambio.hpp  configuracion.hpp  login.hpp  menu.hpp  movimientos.hpp  pago_a.hpp  pago_m.hpp  refill.hpp  titlebar.hpp  venta.hpp
include/view/configuracion/: c_card_mp.hpp  empresa.hpp  general.hpp  impresora.hpp  sistema.hpp  terminal.hpp  usuarios.hpp
src/: main.cpp
src/controller/: cambio.cpp  cambio_a.cpp  cambio_m.cpp  login.cpp  main_window.cpp  movimientos.cpp  pago_a.cpp  pago_m.cpp  refill.cpp  titlebar.cpp  venta.cpp
src/controller/configuracion/: empresa.cpp  general.cpp  impresora.cpp  print_operation.cpp  sistema.cpp  terminal.cpp  usuarios.cpp
src/model/: configuracion.cpp  level_cash.cpp  list_ip.cpp  log.cpp  log_historial.cpp  pago_pendiente.cpp  roles.cpp  usuario_historial.cpp  usuarios.cpp  usuarios_roles.cpp
src/shared/: global.cpp
src/view/: bloq_num.cpp  box_columns.cpp  cambio.cpp  configuracion.cpp  login.cpp  menu.cpp  movimientos.cpp  pago_a.cpp  pago_m.cpp  refill.cpp  titlebar.cpp  venta.cpp
src/view/configuracion/: c_card_mp.cpp  empresa.cpp  general.cpp  impresora.cpp  sistema.cpp  terminal.cpp  usuarios.cpp
ui/: login.ui  main.blp  main.ui  menu.ui  settings  titlebar.ui
ui/menu/: movimientos.ui  pago_m.ui  refill.ui
ui/menu/componente/: agregar_terminal.ui  bloq_numerico.ui  caja_total.ui  main.blp  main.ui  settings
ui/menu/conf/: datos_empresa.ui  detalle_sistema.ui  general.ui  general_val.ui  impresora.ui  mp.ui  usuarios.ui
